@startuml

title __SOEN423-A1's Class Diagram__\n

  namespace Interface {
    interface Interface.commandsInterface {
    }
  }
  

  namespace Model {
    class Model.Item {
    }
  }
  

  namespace Model {
    class Model.Purchase {
    }
  }
  

  namespace Model {
    class Model.Waitlist {
    }
  }
  

  namespace Server {
    class Server.BCServer {
    }
  }
  

  namespace Server {
    class Server.ONServer {
    }
  }
  

  namespace Server {
    class Server.QCServer {
    }
  }
  

  namespace Server {
    namespace mpl {
      class ServerImpl.BCCommandsImpl {
      }
    }
  }
  

  namespace Server {
    namespace mpl {
      class ServerImpl.ONCommandsImpl {
      }
    }
  }
  

  namespace Server {
    namespace mpl {
      class ServerImpl.QCCommandsImpl {
      }
    }
  }
  

  namespace User {
    class User.serverUser {
    }
  }
  

  ServerImpl.BCCommandsImpl .up.|> Interface.commandsInterface
  ServerImpl.BCCommandsImpl -up-|> java.rmi.server.UnicastRemoteObject
  ServerImpl.ONCommandsImpl .up.|> Interface.commandsInterface
  ServerImpl.ONCommandsImpl -up-|> java.rmi.server.UnicastRemoteObject
  ServerImpl.QCCommandsImpl .up.|> Interface.commandsInterface
  ServerImpl.QCCommandsImpl -up-|> java.rmi.server.UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
